@@ -32,8 +32,15 @@ class ParserView(object):
         self.children_field = children_field
         self.view_id = None
 
+    @property
+    def selected_records(self):
+        return []
+
     def get_fields(self):
         return self.children.keys()
+
+    def get_buttons(self):
+        return []
 
     @property
     def modified(self):
